--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.5.2"
+    "axios": "^0.21.4",
+    "inquirer": "^6.5.2",
+    "util": "^0.12.4"
   }
 }
